[package]
name = "anyrun-network-manager"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # Required to build a dynamic library that can be loaded by anyrun

[dependencies]
anyrun-plugin = { git = "https://github.com/anyrun-org/anyrun" }
abi_stable = "0.11.1"
zbus = "5.15.0"
nmrs = "3.1.3"
tokio = "1.52.3"
# Any other dependencies you may have
